--- a/Course Assignment Notebooks/section05_assignments.ipynb
+++ b/Course Assignment Notebooks/section05_assignments.ipynb
@@ -25,24 +25,504 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>survey_id</th>\n",
+       "      <th>age</th>\n",
+       "      <th>number_of_children</th>\n",
+       "      <th>activity_level</th>\n",
+       "      <th>sleep_quality</th>\n",
+       "      <th>number_of_snoozes</th>\n",
+       "      <th>alarm_rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>34</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>active</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5 stars</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>31</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>light</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3 stars</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>light_activity</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1 stars</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>42</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>active</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4 stars</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>30</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>light_activity</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3 stars</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   survey_id  age  number_of_children  activity_level  sleep_quality  \\\n",
+       "0          1   34                 3.0          active            3.0   \n",
+       "1          2   31                 3.0           light            3.0   \n",
+       "2          3   18                 0.0  light_activity            4.0   \n",
+       "3          4   42                 4.0          active            4.0   \n",
+       "4          5   30                 1.0  light_activity            1.0   \n",
+       "\n",
+       "   number_of_snoozes alarm_rating  \n",
+       "0                  1      5 stars  \n",
+       "1                  3      3 stars  \n",
+       "2                  1      1 stars  \n",
+       "3                  1      4 stars  \n",
+       "4                  4      3 stars  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_excel('../data/Alarm Survey Data.xlsx')\n",
+    "df.head()\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(6433, 7)\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 6433 entries, 0 to 6432\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column              Non-Null Count  Dtype  \n",
+      "---  ------              --------------  -----  \n",
+      " 0   survey_id           6433 non-null   int64  \n",
+      " 1   age                 6433 non-null   int64  \n",
+      " 2   number_of_children  6433 non-null   float64\n",
+      " 3   activity_level      6433 non-null   object \n",
+      " 4   sleep_quality       6082 non-null   float64\n",
+      " 5   number_of_snoozes   6433 non-null   int64  \n",
+      " 6   alarm_rating        6433 non-null   object \n",
+      "dtypes: float64(2), int64(3), object(2)\n",
+      "memory usage: 351.9+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.shape)\n",
+    "df.info()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>survey_id</th>\n",
+       "      <th>age</th>\n",
+       "      <th>number_of_children</th>\n",
+       "      <th>activity_level</th>\n",
+       "      <th>sleep_quality</th>\n",
+       "      <th>number_of_snoozes</th>\n",
+       "      <th>alarm_rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>34</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>active</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>31</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>light</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>light_activity</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>42</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>active</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>30</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>light_activity</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   survey_id  age  number_of_children  activity_level  sleep_quality  \\\n",
+       "0          1   34                 3.0          active            3.0   \n",
+       "1          2   31                 3.0           light            3.0   \n",
+       "2          3   18                 0.0  light_activity            4.0   \n",
+       "3          4   42                 4.0          active            4.0   \n",
+       "4          5   30                 1.0  light_activity            1.0   \n",
+       "\n",
+       "   number_of_snoozes  alarm_rating  \n",
+       "0                  1             5  \n",
+       "1                  3             3  \n",
+       "2                  1             1  \n",
+       "3                  1             4  \n",
+       "4                  4             3  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.alarm_rating = df.alarm_rating.str.replace(' stars', '') # Remove ' stars' from the string\n",
+    "df.alarm_rating = pd.to_numeric(df.alarm_rating) # Convert to numeric (float by default)\n",
+    "df.alarm_rating = df.alarm_rating.astype('int64') # Convert to integer\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>survey_id</th>\n",
+       "      <th>age</th>\n",
+       "      <th>number_of_children</th>\n",
+       "      <th>activity_level</th>\n",
+       "      <th>sleep_quality</th>\n",
+       "      <th>number_of_snoozes</th>\n",
+       "      <th>alarm_rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>34</td>\n",
+       "      <td>3</td>\n",
+       "      <td>active</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>31</td>\n",
+       "      <td>3</td>\n",
+       "      <td>light</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0</td>\n",
+       "      <td>light_activity</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>42</td>\n",
+       "      <td>4</td>\n",
+       "      <td>active</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>30</td>\n",
+       "      <td>1</td>\n",
+       "      <td>light_activity</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   survey_id  age  number_of_children  activity_level  sleep_quality  \\\n",
+       "0          1   34                   3          active            3.0   \n",
+       "1          2   31                   3           light            3.0   \n",
+       "2          3   18                   0  light_activity            4.0   \n",
+       "3          4   42                   4          active            4.0   \n",
+       "4          5   30                   1  light_activity            1.0   \n",
+       "\n",
+       "   number_of_snoozes  alarm_rating  \n",
+       "0                  1             5  \n",
+       "1                  3             3  \n",
+       "2                  1             1  \n",
+       "3                  1             4  \n",
+       "4                  4             3  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "df.number_of_children = df.number_of_children.astype('int64')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>survey_id</th>\n",
+       "      <th>age</th>\n",
+       "      <th>number_of_children</th>\n",
+       "      <th>activity_level</th>\n",
+       "      <th>sleep_quality</th>\n",
+       "      <th>number_of_snoozes</th>\n",
+       "      <th>alarm_rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>34</td>\n",
+       "      <td>3</td>\n",
+       "      <td>active</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>31</td>\n",
+       "      <td>3</td>\n",
+       "      <td>light</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0</td>\n",
+       "      <td>light_activity</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>42</td>\n",
+       "      <td>4</td>\n",
+       "      <td>active</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>30</td>\n",
+       "      <td>1</td>\n",
+       "      <td>light_activity</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   survey_id  age  number_of_children  activity_level  sleep_quality  \\\n",
+       "0          1   34                   3          active            3.0   \n",
+       "1          2   31                   3           light            3.0   \n",
+       "2          3   18                   0  light_activity            4.0   \n",
+       "3          4   42                   4          active            4.0   \n",
+       "4          5   30                   1  light_activity            1.0   \n",
+       "\n",
+       "   number_of_snoozes  alarm_rating  \n",
+       "0                  1             5  \n",
+       "1                  3             3  \n",
+       "2                  1             1  \n",
+       "3                  1             4  \n",
+       "4                  4             3  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.sleep_quality = pd.to_numeric(df.sleep_quality)\n",
+    "# pd.to_numeric -> Can Handle NaN values. Converts to float by default.\n",
+    "df.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -61,24 +541,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 6433 entries, 0 to 6432\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column              Non-Null Count  Dtype  \n",
+      "---  ------              --------------  -----  \n",
+      " 0   survey_id           6433 non-null   int64  \n",
+      " 1   age                 6433 non-null   int64  \n",
+      " 2   number_of_children  6433 non-null   int64  \n",
+      " 3   activity_level      6433 non-null   object \n",
+      " 4   sleep_quality       6082 non-null   float64\n",
+      " 5   number_of_snoozes   6433 non-null   int64  \n",
+      " 6   alarm_rating        6433 non-null   int64  \n",
+      "dtypes: float64(1), int64(5), object(1)\n",
+      "memory usage: 351.9+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df['number_of_children'].isna().sum()) # Number of Nan values 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -360,7 +866,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
