completed 2nd - CORRECT- assignment in section 5

--- a/Course Assignment Notebooks/section05_assignments.ipynb
+++ b/Course Assignment Notebooks/section05_assignments.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
        "4                  4      3 stars  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
        "4                  4             3  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
        "4                  4             3  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +513,7 @@
        "4                  4             3  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -571,19 +571,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "351"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['sleep_quality'].isna().sum() # Number of Nan values 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sleep_quality\n",
+       "5.0    2721\n",
+       "4.0    2261\n",
+       "3.0     997\n",
+       "NaN     351\n",
+       "1.0     103\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.sleep_quality.value_counts(dropna=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.sleep_quality.fillna(2, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 6433 entries, 0 to 6432\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column              Non-Null Count  Dtype  \n",
+      "---  ------              --------------  -----  \n",
+      " 0   survey_id           6433 non-null   int64  \n",
+      " 1   age                 6433 non-null   int64  \n",
+      " 2   number_of_children  6433 non-null   int64  \n",
+      " 3   activity_level      6433 non-null   object \n",
+      " 4   sleep_quality       6433 non-null   float64\n",
+      " 5   number_of_snoozes   6433 non-null   int64  \n",
+      " 6   alarm_rating        6433 non-null   int64  \n",
+      "dtypes: float64(1), int64(5), object(1)\n",
+      "memory usage: 351.9+ KB\n"
      ]
     }
    ],
    "source": [
-    "print(df['number_of_children'].isna().sum()) # Number of Nan values 0"
+    "df.info()"
    ]
   },
   {
