--- a/Course Assignment Notebooks/section05_assignments.ipynb
+++ b/Course Assignment Notebooks/section05_assignments.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
        "4                  4      3 stars  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
        "4                  4             3  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
        "4                  4             3  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +513,7 @@
        "4                  4             3  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +580,7 @@
        "351"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +606,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,16 +617,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.sleep_quality.fillna(2, inplace=True)"
+    "df.sleep_quality.fillna(2, inplace=True)\n",
+    "df['sleep_quality'] = df.sleep_quality.astype('int64')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -636,16 +637,16 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 6433 entries, 0 to 6432\n",
       "Data columns (total 7 columns):\n",
-      " #   Column              Non-Null Count  Dtype  \n",
-      "---  ------              --------------  -----  \n",
-      " 0   survey_id           6433 non-null   int64  \n",
-      " 1   age                 6433 non-null   int64  \n",
-      " 2   number_of_children  6433 non-null   int64  \n",
-      " 3   activity_level      6433 non-null   object \n",
-      " 4   sleep_quality       6433 non-null   float64\n",
-      " 5   number_of_snoozes   6433 non-null   int64  \n",
-      " 6   alarm_rating        6433 non-null   int64  \n",
-      "dtypes: float64(1), int64(5), object(1)\n",
+      " #   Column              Non-Null Count  Dtype \n",
+      "---  ------              --------------  ----- \n",
+      " 0   survey_id           6433 non-null   int64 \n",
+      " 1   age                 6433 non-null   int64 \n",
+      " 2   number_of_children  6433 non-null   int64 \n",
+      " 3   activity_level      6433 non-null   object\n",
+      " 4   sleep_quality       6433 non-null   int64 \n",
+      " 5   number_of_snoozes   6433 non-null   int64 \n",
+      " 6   alarm_rating        6433 non-null   int64 \n",
+      "dtypes: int64(6), object(1)\n",
       "memory usage: 351.9+ KB\n"
      ]
     }
@@ -671,24 +672,310 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>survey_id</th>\n",
+       "      <th>age</th>\n",
+       "      <th>number_of_children</th>\n",
+       "      <th>activity_level</th>\n",
+       "      <th>sleep_quality</th>\n",
+       "      <th>number_of_snoozes</th>\n",
+       "      <th>alarm_rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>34</td>\n",
+       "      <td>3</td>\n",
+       "      <td>active</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>31</td>\n",
+       "      <td>3</td>\n",
+       "      <td>light</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0</td>\n",
+       "      <td>light_activity</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>42</td>\n",
+       "      <td>4</td>\n",
+       "      <td>active</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>30</td>\n",
+       "      <td>1</td>\n",
+       "      <td>light_activity</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   survey_id  age  number_of_children  activity_level  sleep_quality  \\\n",
+       "0          1   34                   3          active              3   \n",
+       "1          2   31                   3           light              3   \n",
+       "2          3   18                   0  light_activity              4   \n",
+       "3          4   42                   4          active              4   \n",
+       "4          5   30                   1  light_activity              1   \n",
+       "\n",
+       "   number_of_snoozes  alarm_rating  \n",
+       "0                  1             5  \n",
+       "1                  3             3  \n",
+       "2                  1             1  \n",
+       "3                  1             4  \n",
+       "4                  4             3  "
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "activity_level\n",
+       "active            2450\n",
+       "lightly active    2289\n",
+       "light_activity     691\n",
+       "very active        669\n",
+       "light              334\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['activity_level'].value_counts()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "df.activity_level = np.where( df.activity_level == 'light', 'lightly active', df.activity_level)\n",
+    "df.activity_level = np.where( df.activity_level == 'light_activity', 'lightly active', df.activity_level)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>survey_id</th>\n",
+       "      <th>age</th>\n",
+       "      <th>number_of_children</th>\n",
+       "      <th>activity_level</th>\n",
+       "      <th>sleep_quality</th>\n",
+       "      <th>number_of_snoozes</th>\n",
+       "      <th>alarm_rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>34</td>\n",
+       "      <td>3</td>\n",
+       "      <td>active</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>31</td>\n",
+       "      <td>3</td>\n",
+       "      <td>lightly active</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0</td>\n",
+       "      <td>lightly active</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>42</td>\n",
+       "      <td>4</td>\n",
+       "      <td>active</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>30</td>\n",
+       "      <td>1</td>\n",
+       "      <td>lightly active</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   survey_id  age  number_of_children  activity_level  sleep_quality  \\\n",
+       "0          1   34                   3          active              3   \n",
+       "1          2   31                   3  lightly active              3   \n",
+       "2          3   18                   0  lightly active              4   \n",
+       "3          4   42                   4          active              4   \n",
+       "4          5   30                   1  lightly active              1   \n",
+       "\n",
+       "   number_of_snoozes  alarm_rating  \n",
+       "0                  1             5  \n",
+       "1                  3             3  \n",
+       "2                  1             1  \n",
+       "3                  1             4  \n",
+       "4                  4             3  "
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "number_of_snoozes\n",
+       "0     3367\n",
+       "1     1229\n",
+       "2      693\n",
+       "4      427\n",
+       "5      345\n",
+       "3      309\n",
+       "6       59\n",
+       "8        2\n",
+       "19       1\n",
+       "7        1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['number_of_snoozes'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['number_of_snoozes'] = np.where(df['number_of_snoozes'] == 19,  df['number_of_snoozes'].mode(), df['number_of_snoozes'])"
+   ]
   },
   {
    "cell_type": "markdown",
