--- a/Course Assignment Notebooks/section05_assignments.ipynb
+++ b/Course Assignment Notebooks/section05_assignments.ipynb
@@ -824,6 +824,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Alternative way to replace values\n",
+    "#activity_map = {'light': 'lightly active', 'light_activity': 'lightly active'}\n",
+    "#df.activity_level = df.activity_level.map(activity_map)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 109,
    "metadata": {},
    "outputs": [
