--- a/Course Assignment Notebooks/section05_assignments.ipynb
+++ b/Course Assignment Notebooks/section05_assignments.ipynb
@@ -1411,6 +1411,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.reset_index(drop=True, inplace=True) # Reset index. drop=True to not add old index as a column ,while Inplace=True to modify the dataframe directly."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
