finished section06 assignments

--- a/Course Assignment Notebooks/section05_assignments.ipynb
+++ b/Course Assignment Notebooks/section05_assignments.ipynb
@@ -2689,7 +2689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2700,7 +2700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2711,9 +2711,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Customer</th>\n",
+       "      <th>Item</th>\n",
+       "      <th>Pen Cost</th>\n",
+       "      <th>Shipping Cost</th>\n",
+       "      <th>Purchase Date</th>\n",
+       "      <th>Delivery Date</th>\n",
+       "      <th>Review</th>\n",
+       "      <th>Total Spend</th>\n",
+       "      <th>numberOfDays</th>\n",
+       "      <th>Delivery Time</th>\n",
+       "      <th>User Name</th>\n",
+       "      <th>Review Text</th>\n",
+       "      <th>Leak or Spill</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5201</td>\n",
+       "      <td>Ballpoint Pens</td>\n",
+       "      <td>5.99</td>\n",
+       "      <td>2.99</td>\n",
+       "      <td>2023-05-01</td>\n",
+       "      <td>2023-05-03</td>\n",
+       "      <td>DoodleWithMe|I love the way this pen writes, b...</td>\n",
+       "      <td>8.98</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>DoodleWithMe</td>\n",
+       "      <td>I love the way this pen writes, but unfortunat...</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5202</td>\n",
+       "      <td>Sharpies</td>\n",
+       "      <td>12.99</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2023-05-01</td>\n",
+       "      <td>2023-05-04</td>\n",
+       "      <td>ScribbleMaster|The classic Sharpie marker has ...</td>\n",
+       "      <td>12.99</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>ScribbleMaster</td>\n",
+       "      <td>The classic Sharpie marker has a bold, permane...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5203</td>\n",
+       "      <td>Ballpoint Pens (Bold)</td>\n",
+       "      <td>6.95</td>\n",
+       "      <td>4.99</td>\n",
+       "      <td>2023-05-01</td>\n",
+       "      <td>2023-05-02</td>\n",
+       "      <td>PenPalForever|The retractable ballpoint pen ha...</td>\n",
+       "      <td>11.94</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>PenPalForever</td>\n",
+       "      <td>The retractable ballpoint pen has a durable, m...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5204</td>\n",
+       "      <td>Gel Pens</td>\n",
+       "      <td>5.99</td>\n",
+       "      <td>2.99</td>\n",
+       "      <td>2023-05-01</td>\n",
+       "      <td>2023-05-04</td>\n",
+       "      <td>TheWriteWay|This gel pen has a comfortable gri...</td>\n",
+       "      <td>8.98</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>TheWriteWay</td>\n",
+       "      <td>This gel pen has a comfortable grip and writes...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5205</td>\n",
+       "      <td>Rollerball Pens</td>\n",
+       "      <td>12.99</td>\n",
+       "      <td>1.99</td>\n",
+       "      <td>2023-05-01</td>\n",
+       "      <td>2023-05-03</td>\n",
+       "      <td>PenAndPaperPerson|The rollerball pen has a smo...</td>\n",
+       "      <td>14.98</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>PenAndPaperPerson</td>\n",
+       "      <td>The rollerball pen has a smooth, fluid feel an...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Customer                   Item  Pen Cost  Shipping Cost Purchase Date  \\\n",
+       "0      5201         Ballpoint Pens      5.99           2.99    2023-05-01   \n",
+       "1      5202               Sharpies     12.99           0.00    2023-05-01   \n",
+       "2      5203  Ballpoint Pens (Bold)      6.95           4.99    2023-05-01   \n",
+       "3      5204               Gel Pens      5.99           2.99    2023-05-01   \n",
+       "4      5205        Rollerball Pens     12.99           1.99    2023-05-01   \n",
+       "\n",
+       "  Delivery Date                                             Review  \\\n",
+       "0    2023-05-03  DoodleWithMe|I love the way this pen writes, b...   \n",
+       "1    2023-05-04  ScribbleMaster|The classic Sharpie marker has ...   \n",
+       "2    2023-05-02  PenPalForever|The retractable ballpoint pen ha...   \n",
+       "3    2023-05-04  TheWriteWay|This gel pen has a comfortable gri...   \n",
+       "4    2023-05-03  PenAndPaperPerson|The rollerball pen has a smo...   \n",
+       "\n",
+       "   Total Spend  numberOfDays  Delivery Time          User Name  \\\n",
+       "0         8.98             2              2       DoodleWithMe   \n",
+       "1        12.99             3              3     ScribbleMaster   \n",
+       "2        11.94             1              1      PenPalForever   \n",
+       "3         8.98             3              3        TheWriteWay   \n",
+       "4        14.98             2              2  PenAndPaperPerson   \n",
+       "\n",
+       "                                         Review Text  Leak or Spill  \n",
+       "0  I love the way this pen writes, but unfortunat...           True  \n",
+       "1  The classic Sharpie marker has a bold, permane...          False  \n",
+       "2  The retractable ballpoint pen has a durable, m...          False  \n",
+       "3  This gel pen has a comfortable grip and writes...          False  \n",
+       "4  The rollerball pen has a smooth, fluid feel an...          False  "
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_1.head()"
    ]
