staarting the mid-course project

--- a/Course Assignment Notebooks/section06_exploring_data_assignment.ipynb
+++ b/Course Assignment Notebooks/section06_exploring_data_assignment.ipynb
@@ -315,7 +315,7 @@
    "outputs": [],
    "source": [
     "# Filter out any data before 2010 and after 2019\n",
-    "filtered_df = df[(df['year'] >= 2010) & (df['year'] <= 2019)]\n"
+    "filtered_df = df[(df['year'] >= 2010) & (df['year'] <= 2019)]"
    ]
   },
   {
@@ -348,7 +348,7 @@
    ],
    "source": [
     "# Group the data by country and calculate the maximum happiness score for each one\n",
-    "filtered_df.groupby('country_name')['happiness_score'].max()\n"
+    "filtered_df.groupby('country_name')['happiness_score'].max()"
    ]
   },
   {
@@ -376,7 +376,7 @@
    "source": [
     "# Sort the grouped countries by happiness score and return the top five\n",
     "list_1 = filtered_df.groupby('country_name')['happiness_score'].max().sort_values(ascending=False).head(5)\n",
-    "list_1\n"
+    "list_1"
    ]
   },
   {
